# Zn-Rotations-Cryptosystem

./: .gitmodules  CMakeLists.txt  Doxyfile  LLLattack.cpp  LLLattack.h  README.md  cryptosystem.cpp  cryptosystem.h  fplll_utils.cpp  fplll_utils.h  generateChallenges.cpp  generateChallenges.h  key_pair.cpp  key_pair.h  main.cpp  sampling.cpp  sampling.h  utils.cpp  utils.h
challenges/n128_2E-10/: ciphertext0  ciphertext1  ciphertext10  ciphertext11  ciphertext12  ciphertext13  ciphertext14  ciphertext15  ciphertext16  ciphertext17  ciphertext18  ciphertext19  ciphertext2  ciphertext3  ciphertext4  ciphertext5  ciphertext6  ciphertext7  (+4 more)
docs/: LLLattack_8h_source.html  annotated.html  classCryptosystem-members.html  classCryptosystem.html  classEigen_1_1EigenMultivariateNormal-members.html  classEigen_1_1EigenMultivariateNormal.html  classLLLattack-members.html  classLLLattack.html  classes.html  cryptosystem_8h.html  cryptosystem_8h_source.html  eigenmvn_8h_source.html  files.html  functions.html  functions_func.html  generateChallenges_8h_source.html  globals.html  globals_func.html  index.html  md_README.html  namespaceEigen.html  namespaces.html  pages.html  sampling_8h.html  sampling_8h_source.html  structEigen_1_1internal_1_1functor__traits_3_01scalar__normal__dist__op_3_01Scalar_01_4_01_4-members.html  structEigen_1_1internal_1_1functor__traits_3_01scalar__normal__dist__op_3_01Scalar_01_4_01_4.html  structEigen_1_1internal_1_1scalar__normal__dist__op-members.html  structEigen_1_1internal_1_1scalar__normal__dist__op.html  utils_8h.html  utils_8h_source.html
(+183 files in other folders)
